FEAT: transactions and consolidations
