# lib/cumbuca_web/controllers/api/accounts_controller.ex
@@ -1,7 +1,7 @@
 defmodule CumbucaWeb.AccountsController do
   use CumbucaWeb, :controller
 
-  alias Cumbuca.AccountContext
+  alias Cumbuca.{AccountContext, ConsolidationContext}
   alias CumbucaWeb.{Auth, Response}
 
   @doc """
@@ -170,6 +170,30 @@ defmodule CumbucaWeb.AccountsController do
     |> Map.put("authed", Auth.get_user(conn))
     |> Map.put("permission", Auth.get_permission(conn))
     |> AccountContext.delete()
+    |> Response.pipe(conn)
+  end
+
+  @doc """
+    Get consolidations from account
+
+    ---| swagger |---
+      tag "accounts"
+      get "/api/accounts/{account_id}/consolidations"
+      produces "application/json"
+      parameter "authorization", :header, :string, "Access Token"
+      parameters do
+        account_id :path, :string, "Account id", required: true
+        from :query, :date, "Date from"
+        to :query, :date, "Date to"
+      end
+      CumbucaWeb.Response.swagger 200, data: [Cumbuca.Core.Consolidation._swagger_schema_(:account_owner)]
+    ---| end |---
+  """
+  def all_consolidations(conn, params) do
+    params
+    |> Map.put("authed", Auth.get_user(conn))
+    |> Map.put("permission", Auth.get_permission(conn))
+    |> ConsolidationContext.all_by_account()
     |> Response.pipe(conn)
   end
 end
